Fix typo and add link

--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
   <footer class="footer">
     <p>&copy; 2022 by Cynthia Teeters. </p>
     <p class="disclaimer">
-      This website created for instructional purposes and does not represent a real person. Photo image create by
-      DALL&#8209;E.
+      This website created for instructional purposes and does not represent a real person. Photo image created by
+      DALL&#8209;E by <a href="https://labs.openai.com/">OpenAI</a>.
     </p>
   </footer>
 
