--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     </div>
     <p class="intro">Hello, I'm Cynthia Teeters, freelance fullstack developer, with a focus on front-end development. I
       build
-      websites and web applications using HTML, CSS, and JavaScript, focusing on accessibility and performance. </p>
+      websites and web applications using HTML, CSS, and JavaScript, while focusing on accessibility and performance.
+    </p>
   </header>
   <!-- all about me -->
   <main class="main">
