--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
       <h1>Cynthia Teeters</h1>
       <h2>Freelance Fullstack Developer</h2>
     </div>
-    <p class="intro">Hello, I'm Cynthia Teeters, freelance fullstack developer, with a focus on front-end development. I
-      build
-      websites and web applications using HTML, CSS, and JavaScript, while focusing on accessibility and performance.
+    <p class="intro">Hello, I'm Cynthia Teeters, freelance fullstack developer,
+      with particular expertise on front-end development. I
+      build websites and web applications using HTML, CSS, and JavaScript, while
+      focusing on accessibility and performance.
     </p>
   </header>
   <!-- all about me -->
